--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "html2canvas": "^1.4.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-component-export-image": "^1.0.6",
     "react-component-image": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
